# autolab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
auto-arena/: README.md  auto_arena.py  pyproject.toml
auto-clash/: README.md  auto_clash.py  pyproject.toml
auto-evolve/: README.md  auto_evolve.py  pyproject.toml
auto-judge/: README.md  auto_judge.py  pyproject.toml
auto-steer/: README.md  auto_steer.py  pyproject.toml
docs/: IDEAS.md
skills/autoresearch-arena/: SKILL.md
skills/autoresearch-arena/references/: strategies.md  violations.md
skills/autoresearch-clash/: SKILL.md
skills/autoresearch-clash/references/: strategies.md  violations.md
skills/autoresearch-evaluate/: SKILL.md
skills/autoresearch-evaluate/references/: verdicts.md  violations.md
skills/autoresearch-evolve/: SKILL.md
skills/autoresearch-evolve/references/: strategies.md  violations.md
skills/autoresearch-steer/: SKILL.md
skills/autoresearch-steer/references/: strategies.md  violations.md
templates/: program-addon.md
test-data/: results.tsv
tests/: test_autoarena.py  test_autoclash.py  test_autoevolve.py  test_autojudge.py  test_autosteer.py
