[project]
name = "autolab"
version = "0.1.0"
description = "Companion tools for Karpathy's autoresearch — smarter evaluation, guided steering, and multi-agent competitions"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = [
    "autoresearch",
    "karpathy",
    "gpt",
    "pretraining",
    "ai-research",
    "experiment-tracking",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "autojudge==0.1.0",
    "autosteer==0.1.0",
    "autoclash==0.1.0",
]

[project.urls]
Homepage = "https://github.com/dean0x/autolab"
Repository = "https://github.com/dean0x/autolab"
Issues = "https://github.com/dean0x/autolab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
