[project]
name = "autosteer"
version = "1.0.1"
description = "Research direction generator for autoresearch — analyzes experiment history and suggests next steps"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["autoresearch", "karpathy", "gpt", "pretraining", "experiment-suggestions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["click>=8.0"]

[project.scripts]
autosteer = "auto_steer:main"

[project.urls]
Homepage = "https://github.com/dean0x/autolab"
Repository = "https://github.com/dean0x/autolab"
Issues = "https://github.com/dean0x/autolab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_steer.py"]
